--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -19081,6 +19081,25 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Dialogue.LordaeronDialogueSetup.Setup
   nameWithType: LordaeronDialogueSetup.Setup
+- uid: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup
+  name: QuelthalasDialogueSetup
+  href: api-source/WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.html
+  commentId: T:WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup
+  fullName: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup
+  nameWithType: QuelthalasDialogueSetup
+- uid: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup
+  name: Setup()
+  href: api-source/WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.html#WarcraftLegacies_Source_Dialogue_QuelthalasDialogueSetup_Setup
+  commentId: M:WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup
+  fullName: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup()
+  nameWithType: QuelthalasDialogueSetup.Setup()
+- uid: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup*
+  name: Setup
+  href: api-source/WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.html#WarcraftLegacies_Source_Dialogue_QuelthalasDialogueSetup_Setup_
+  commentId: Overload:WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Dialogue.QuelthalasDialogueSetup.Setup
+  nameWithType: QuelthalasDialogueSetup.Setup
 - uid: WarcraftLegacies.Source.Dialogue.ScourgeDialogueSetup
   name: ScourgeDialogueSetup
   href: api-source/WarcraftLegacies.Source.Dialogue.ScourgeDialogueSetup.html
